# cppJNI

./: CMakeLists.txt
include/cppjni/: jni_thread_hint.hpp  non_copyable.hpp  virtual_machine.hpp
include/cppjni/jni_wrappers/: environment.hpp  global_reference.hpp  local_reference.hpp
include/cppjni/types/: class.hpp  object.hpp
src/: CMakeLists.txt
tst/: CMakeLists.txt
